# linkcad-sdk

./: .clang-format  .gitignore  LICENSE.md  README.md  build-examples.ps1
examples/: CMakeLists.txt  CMakePresets.json  vcpkg.json
examples/skeleton/: CMakeLists.txt  SkeletonReader.cpp  SkeletonReader.h  SkeletonReaderPlugIn.cpp
examples/tlcin/: CMakeLists.txt  TlcReader.cpp  TlcReader.h  TlcReaderPlugIn.cpp  TlcReaderPlugIn.h
examples/tlcout/: CMakeLists.txt  TlcWriter.cpp  TlcWriter.h  TlcWriterPlugIn.cpp  TlcWriterPlugIn.h
sdk/: vcpkg.json
sdk/cmake/: SDKConfig.cmake
sdk/include/lc/: lctypes.h  lcunits.h
sdk/include/lc/conv/: Properties.h
sdk/include/lc/db/: Arc.h  AutoLock.h  AutoPtr.h  BooleanProperty.h  Cell.h  CellObject.h  CellObjectCollection.h  CellRefCollection.h  Collection.h  Donut.h  Drawing.h  DrawingObject.h  Ellipse.h  Exception.h  FontManager.h  IDrawingEventListener.h  IObjectEventListener.h  IRegionQuery.h  IRenderer.h  IntegerProperty.h  Iterator.h  Layer.h  LayerCollection.h  Nurbs.h  Object.h  ObjectType.h  Polygon.h  Polyline.h  Property.h  RealProperty.h  Ref.h  RegionQuery.h  Shape.h  SnapPoint.h  StringProperty.h  Tessellation.h  Text.h  db.h  db_fwd.h  dbdefs.h  (+3 more)
sdk/include/lc/env/: IEventLog.h
sdk/include/lc/geom/: Angle.h  Bounds.h  Point2d.h  PointArray.h  Region.h  Region.inl  Resolution.h  Tolerance.h  Vector2d.h  Xform.h  geom.h  geomdefs.h
sdk/include/lc/lic/: License.h
sdk/include/lc/plugin/: IDrawingBuilder.h  IFormat.h  IFormatRegistry.h  IPlugIn.h  IPlugInContext.h  IPluginController.h  IReader.h  IReaderImpl.h  IReaderPlugIn.h  IWizardDialog.h  IWriter.h  IWriterController.h  IWriterImpl.h  IWriterPlugIn.h
sdk/include/lc/shp/: IFont.h  IShapeRenderer.h  Style.h  shp.h
sdk/include/lc/util/: Color.h  Color.inl  Round.h  cntstream.h  enumclassops.h  lcassert.h  lcmath.h  string_conv.h  string_conv.inl
sdk/lib/windows-x64/release/: lcdb4.lib
